--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.750.0",
     "bcryptjs": "^3.0.2",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
@@ -18,6 +19,7 @@
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sharp": "^0.33.5",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
