--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.750.0",
+    "@hello-pangea/dnd": "^18.0.1",
     "bcryptjs": "^3.0.2",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
