--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "keyholding",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
@@ -11,6 +12,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.750.0",
     "@hello-pangea/dnd": "^18.0.1",
+    "@stripe/stripe-js": "^7.8.0",
     "bcryptjs": "^3.0.2",
     "date-fns": "^4.1.0",
     "joi": "^17.13.3",
@@ -25,6 +27,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sharp": "^0.33.5",
+    "stripe": "^18.4.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
